<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">
    <include
        layout="@layout/app_bar"/>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screenbg"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:id="@+id/msgLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/register_padding_top"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:text="Login" >
            </TextView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/UserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/msgLayout"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/register_padding_top"
                android:layout_gravity="center"
                android:text="Username"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="#ffffff"
                />


            <EditText
                android:id="@+id/etUname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin8"
                android:layout_marginLeft="@dimen/margin30"
                android:layout_marginRight="@dimen/margin30"
                android:ems="20"
                android:gravity="center"
                android:textCursorDrawable="@null"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/edittext_border"
                android:inputType="textEmailAddress"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/UserNameLayout"
            android:orientation="vertical"
            android:layout_marginTop="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/register_padding_top"
                android:layout_gravity="center"
                android:text="Password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="#ffffff"
                />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin8"
                android:layout_marginLeft="@dimen/margin30"
                android:layout_marginRight="@dimen/margin30"
                android:ems="20"
                android:gravity="center"
                android:textCursorDrawable="@null"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/edittext_border"
                android:inputType="textPassword"/>


            <TextView
                android:id="@+id/forgotPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/register_padding_top"
                android:layout_gravity="center"
                android:text="Forgot Password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"
                android:textColor="@color/colorHints"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/PasswordLayout"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:id="@+id/loignButton"
                android:background="@drawable/layout_bg_selector"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_marginTop="31dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/buttonLayout">


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/messageToRegisterLeft"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <TextView
                android:id="@+id/registerTv"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/messageToRegister"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorHints"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/messageToRegisterRight"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>